--- a/BootStrap.html
+++ b/BootStrap.html
@@ -44,27 +44,60 @@
           <img src="Photos/1.jpg" class="d-block w-70" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="Photos/2.jpeg" class="d-block w-70" alt="...">
+          <img src="Photos/2.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="Photos/3.jpeg" class="d-block w-70" alt="...">
+          <img src="Photos/3.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="Photos/4.jpeg" class="d-block w-70" alt="...">
+          <img src="Photos/4.png" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
           <img src="Photos/5.jpg" class="d-block w-70" alt="...">
         </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Предыдущий</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Следующий</span>
+      </button>
     </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Предыдущий</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Следующий</span>
-  </button>
-</div>
+<hr>
+<br>
+     <div class="container">
+         <div class = 'row'>
+             <div class="cal-sm-12 col-md-6 col-lg-4">
+                 <div class="card" style="width: 18rem;">
+                      <img src="Photos/ABand.jpg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">АНТОНИО БАНДЕРАС</h5>
+                        <p class="card-text">Испанский актёр кино, телевидения, мюзиклов и озвучивания, кинорежиссёр.
+                                             Известный своими работами в фильмах нескольких жанров.</p>
+                        <a href="#" class="btn btn-primary">Читать всю биографию</a>
+                      </div>
+                 </div>
+                 <div class="card" style="width: 18rem;">
+                      <img src="Photos/AJoly.jpg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">АНДЖЕЛИНА ДЖОЛИ</h5>
+                        <p class="card-text">Американская актриса кино, телевидения и озвучивания, кинорежиссёр, сценаристка, продюсер, фотомодель, посол доброй воли ООН.</p>
+                        <a href="#" class="btn btn-primary">Читать всю биографию</a>
+                      </div>
+                 </div>
+                 <div class="card" style="width: 18rem;">
+                      <img src="Photos/JonTr.jpg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">ДЖОН ТРАВОЛТА</h5>
+                        <p class="card-text">Американский актёр, танцор и певец, лауреат премий «Золотой глобус» и «Эмми», а также двухкратный номинант на «Оскар».</p>
+                        <a href="#" class="btn btn-primary">Читать всю биографию</a>
+                      </div>
+                 </div>
+             </div>
+         </div>
+     </div>
 
      <div class="container">
        <div class = 'cal-sm-12'>
