--- a/Fundamentals_HTML.html
+++ b/Fundamentals_HTML.html
@@ -9,21 +9,23 @@
   <h1 style="text-align: center; color: green; font-size: 48px;">Мои любимые рецепты!</h1>
   <hr>
 
+  <!-- Таблица с рецептами -->
     <table bgcolor='lightblue' align ='center' border='2px' height='400px' width='800px'>
-    <tr>
+    <!-- Заголовки столбцов -->
+	<tr>
 		<th>Название блюда</th>
 		<th>Оценка блюда от 1 до 10</th>
 		<th>Ссылка на рецепт</th>
 		<th>Фото блюда</th>
 	</tr>
-
+    <!-- Ряд с информацией о первом блюде -->
     <tr>
 		<td>ПАСТА С СЕМГОЙ В СЛИВОЧНОМ СОУСЕ</td>
 		<td align ='center'>10</td>
 		<td><a href="https://1000.menu/cooking/38590-pasta-s-semgoi-v-slivochnom-souse" target="_blank">Вкуснейшая паста!</a></td>
 		<td><img src="Photos/salmon.jpg" height='150px'></td>
 	</tr>
-
+    <!-- Повторение для других блюд -->
 	<tr>
 		<td>ПРАВИЛЬНЫЙ СТЕЙК ИЗ ГОВЯДИНЫ</td>
 		<td align ='center'>8</td>
