--- a/BootStrap.html
+++ b/BootStrap.html
@@ -3,16 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <!-- Подключение файла стилей Bootstrap с CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
+     <!-- Заголовок 1 с навигационной панелью -->
     <h1 style="background-color: #007bff; color: #fff; text-align: center; padding-top: 50px;" >
+        <!-- Ссылка с классом для бренда и логотипа -->
         <a class="navbar-brand d-flex justify-content-between align-items-center" href="#">
-            <span></span>
+            <span></span><!-- Пустой span для отступа -->
+             <!-- Логотип с использованием изображения -->
             <img src="Photos/bootstrap-logo.svg" alt="Logo" width="59" height="50" class="d-inline-block align-text-top">
+            <!-- Текст названия сайта -->
             СОЗДАНИЕ САЙТА ПРИ ПОМОЩИ BOOTSTRAP
+            <!-- Кнопка для профиля с уведомлением -->
             <button type="button" class="btn btn-primary position-relative">
               Профиль
+              <!-- Уведомление внутри кнопки -->
               <span class="position-absolute top-0 start-100 translate-middle p-2 bg-danger border border-light rounded-circle">
                 <span class="visually-hidden">Новые уведомления</span>
               </span>
@@ -21,23 +28,31 @@
         </a>
     </h1>
 
+     <!-- Навигационная панель Bootstrap -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
+           <!-- Логотип или название навигации -->
         <a class="navbar-brand" href="#">Навигация</a>
+          <!-- Кнопка для открытия/закрытия меню на мобильных устройствах -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Переключатель навигации">
           <span class="navbar-toggler-icon"></span>
         </button>
+           <!-- Содержимое меню -->
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
+               <!-- Пункт меню "Главная" с активным стилем -->
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#">Главная</a>
             </li>
+              <!-- Пункт меню "Каталог" -->
             <li class="nav-item">
               <a class="nav-link" href="#">Каталог</a>
             </li>
+              <!-- Пункт меню "Рекомендации" -->
             <li class="nav-item">
               <a class="nav-link" href="#">Рекомендации</a>
             </li>
+              <!-- Пункт меню "Цены" с отключенной ссылкой -->
             <li class="nav-item">
               <a class="nav-link disabled">Цены</a>
             </li>
@@ -46,7 +61,9 @@
       </div>
     </nav>
 
+     <!-- Карусель изображений с плавным переходом между слайдами -->
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+      <!-- Блок с изображениями -->
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="Photos/1.jpg" class="d-block w-70" alt="...">
@@ -64,10 +81,12 @@
           <img src="Photos/5.jpg" class="d-block w-70" alt="...">
         </div>
       </div>
+        <!-- Кнопка для переключения на предыдущий слайд -->
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Предыдущий</span>
       </button>
+        <!-- Кнопка для переключения на следующий слайд -->
       <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Следующий</span>
@@ -76,6 +95,7 @@
 
     <br><br>
 
+     <!-- Заголовок -->
     <h1 style="text-align: center; background-color: #007bff; color: #fff; padding: 10px;">
         НАШИ ЛУЧШИЕ СОТРУДНИКИ
     </h1>
@@ -83,10 +103,12 @@
     <br><br>
 
      <div class="container">
+         <!-- Карточки с информацией о знаменитостях -->
          <div class='row'>
              <div class="cal-sm-12 col-md-6 col-lg-4">
                  <div class="card" style="width: 18rem;">
                       <img src="Photos/ABand.jpg" class="card-img-top" alt="...">
+                     <!-- Содержимое карточки -->
                       <div class="card-body">
                         <h5 class="card-title d-flex justify-content-center">АНТОНИО БАНДЕРАС</h5>
                         <p class="card-text">Испанский актёр кино, телевидения, мюзиклов и озвучивания, кинорежиссёр.
@@ -95,9 +117,11 @@
                       </div>
                  </div>
              </div>
+             <!-- Вторая карточка -->
              <div class="cal-sm-12 col-md-6 col-lg-4">
                  <div class="card" style="width: 18rem;">
                       <img src="Photos/AJoly.jpg" class="card-img-top" alt="...">
+                     <!-- Содержимое карточки -->
                       <div class="card-body">
                         <h5 class="card-title d-flex justify-content-center">АНДЖЕЛИНА ДЖОЛИ</h5>
                         <p class="card-text">Американская актриса кино, телевидения и озвучивания, кинорежиссёр, сценаристка, продюсер, фотомодель, посол доброй воли ООН.</p>
@@ -105,9 +129,11 @@
                       </div>
                  </div>
              </div>
+             <!-- Третья карточка -->
              <div class="cal-sm-12 col-md-6 col-lg-4">
                  <div class="card" style="width: 18rem;">
                       <img src="Photos/JonTr.jpg" class="card-img-top" alt="...">
+                     <!-- Содержимое карточки -->
                       <div class="card-body">
                         <h5 class="card-title d-flex justify-content-center">ДЖОН ТРАВОЛТА</h5>
                         <p class="card-text">Американский актёр, танцор и певец, лауреат премий «Золотой глобус» и «Эмми», а также двухкратный номинант на «Оскар».</p>
@@ -117,13 +143,16 @@
              </div>
          </div>
      </div>
+     <!-- Дополнительные отступы -->
     <br><br>
 
+     <!-- Заголовок блока -->
     <h1 style="text-align: center; background-color: #007bff; color: #fff; padding: 10px;">
         ИНТЕРЕСНАЯ ИНФОРМАЦИЯ
     </h1>
 
     <br> <br>
+     <!-- Аккордеон с интересными фактами о космосе -->
     <div class="accordion accordion-flush" id="accordionFlushExample">
           <div class="accordion-item">
             <h2 class="accordion-header">
@@ -162,28 +191,34 @@
             </div>
           </div>
     </div>
+     <!-- Дополнительные отступы -->
     <br><br>
 
+     <!-- Начало футера с указанием цвета фона и внутреннего отступа -->
     <footer style="background-color: #f8f9fa; padding: 20px;">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <h3>Контактная информация</h3>
-                <p>Телефон: +7 (XXX) XXX-XX-XX</p>
-                <p>Email: example@example.com</p>
-                <p>Адрес: ул. Примерная, д. 123</p>
-            </div>
-            <div class="col-md-6">
-                <h3>Социальные сети</h3>
-                <ul class="list-inline">
-                    <li class="list-inline-item"><a href="#" target="_blank">Facebook</a></li>
-                    <li class="list-inline-item"><a href="#" target="_blank">Twitter</a></li>
-                    <li class="list-inline-item"><a href="#" target="_blank">Instagram</a></li>
-                </ul>
+        <!-- Контейнер для выравнивания содержимого -->
+        <div class="container">
+            <div class="row"><!-- Строка для размещения двух колонок -->
+                <!-- Первая колонка с контактной информацией -->
+                <div class="col-md-6">
+                    <h3>Контактная информация</h3>
+                    <p>Телефон: +7 (XXX) XXX-XX-XX</p>
+                    <p>Email: example@example.com</p>
+                    <p>Адрес: ул. Примерная, д. 123</p>
+                </div>
+                <!-- Вторая колонка с контактной информацией -->
+                <div class="col-md-6">
+                    <h3>Социальные сети</h3>
+                    <ul class="list-inline">
+                        <li class="list-inline-item"><a href="#" target="_blank">Facebook</a></li>
+                        <li class="list-inline-item"><a href="#" target="_blank">Twitter</a></li>
+                        <li class="list-inline-item"><a href="#" target="_blank">Instagram</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
-    </div>
-</footer>
+        <!-- Завершение футера -->
+   </footer>
 
 
 
